--- a/photofetcher-style.css
+++ b/photofetcher-style.css
@@ -12,19 +12,18 @@ body {
     font-family: 'Inter', sans-serif;
     font-family: 'Raleway', sans-serif;
   }
+
   .switch {
     position: relative;
     display: inline-block;
     width: 50px;
     height: 24px;
   }
-  
   .switch input { 
     opacity: 0;
     width: 0;
     height: 0;
   }
-  
   .slider {
     position: absolute;
     cursor: pointer;
@@ -36,7 +35,6 @@ body {
     -webkit-transition: .4s;
     transition: .4s;
   }
-  
   .slider:before {
     position: absolute;
     content: "";
@@ -48,52 +46,61 @@ body {
     -webkit-transition: .4s;
     transition: .4s;
   }
-  
   input:checked + .slider {
     background-color: #2196F3;
   }
   input:focus + .slider {
     box-shadow: 0 0 1px #1f659e;
   }
-  
   input:checked + .slider:before {
     -webkit-transform: translateX(23px);
     -ms-transform: translateX(23px);
     transform: translateX(23px);
   }
-  
   .slider.round {
     border-radius: 24px;
   }
-  
   .slider.round:before {
     border-radius: 50%;
   }
 
- 
-
-    #fetch-button {
+  #fetch-button {
         background-color: #6b4ad5;
         border: none;
         color: white;
-        padding: 5px;
-        border-radius: 2px;
-        font-size: 14px;
+        padding: 6px 14px;
+        border-radius: 4px;
+        display: inline-block;
+        font-size: 13px;
         cursor: pointer;
         margin-left: 435px;
-      }
+  }
       
-      #fetch-more-button {
+      #more-photos-button {
         background-color: #6b4ad5;
         border: none;
         color: white;
-        padding: 5px;
-        border-radius: 2px;
-        font-size: 14px;
+        padding: 6px 284px;
+        border-radius: 4px;
+        font-size: 13px;
         cursor: pointer;
-        width: 750px;
+       
+        display: inline-block;
+        
+        margin: 4px 2px;
       }
-      
-      img { 
+      #photoContainer {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 8px; /* Adjust the gap as needed */
+        margin: 8px;
+       
+      }
+  
+      .photo {
+        width: 300px; 
+        height: 200px;
         padding: 8px;
+        gap: 8px;
       }
+     
