--- a/photofetcher-style.css
+++ b/photofetcher-style.css
@@ -11,6 +11,7 @@ body {
   .text {
     font-family: 'Inter', sans-serif;
     font-family: 'Raleway', sans-serif;
+    margin: 10px;
   }
 
   .switch {
