--- a/photofetcher-style.css
+++ b/photofetcher-style.css
@@ -98,4 +98,29 @@ body {
         height: 200px;
         margin: 8px;
       }
+
+      .author {
+        background: rgba(0, 0, 0, 0.7);
+        color: #fff;
+        position: absolute;
+        margin-top: -68.5px;
+        margin-left: 8px;
+        width: 347px;
+        height: 37px;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+        cursor: pointer;
+      }
+      .author-name {
+        font-size: 18px;
+        margin: 0;
+        padding: 0;
+      }
+      .img-link {
+        font-size: 15px;
+        margin: 0;
+        padding: 0;
+      }
+     
      
